--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -1,16 +1,11 @@
----
-plugin: aws_ec2
 regions:
   - ap-south-1
-# filters:
-#   instance-state-code: 16
+
+filters:
+  tag:Name:
+    - private1
+    - private2
 
 compose:
-  # Use the private IP address to connect to the host
-  # (note: this does not modify inventory_hostname, which is set via I(hostnames))
   ansible_host: private_ip_address
-  ansible_user: "ubuntu"
-
-tag:Name:
-  - private1
-  - private2
+  ansible_user: ubuntu
