--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
-[defaults]
+/*[defaults]
 # some basic default values...
 inventory               =       /var/lib/jenkins/workspace/tool/aws_ec2.yml
 private_key_file        =       /var/lib/jenkins/workspace/tool/keyins.pem
@@ -6,3 +6,4 @@ remote_user             =       ubuntu
 host_key_checking       =       False
 [inventory]
 enable_plugins          =       aws_ec2
+*/
