--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -1,14 +1,14 @@
-plugin: aws_ec2
-regions:
-  - ap-south-1
+#plugin: aws_ec2
+#regions:
+ # - ap-south-1
 
-filters:
-  tag:Name:
-    - private1
-    - private2
-    - bastion1
-    - bastion2
+#filters:
+ # tag:Name:
+  #  - private1
+   # - private2
+    #- bastion1
+    #- bastion2
 
-compose:
-  ansible_host: private_ip_address
-  ansible_user: ubuntu
+#compose:
+ # ansible_host: private_ip_address
+  #ansible_user: ubuntu
